# cmip6_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
cmip6_utils/: cli.py  cmip6.py  dir.py  file.py  misc.py  nchelpers.py  parallel.py  time.py
cmip6_utils/historical/: rule_exceptions.py
cmip6_utils/scripts/: check_consistency.py  cmip6_check_consistency.py  cmip6_combine.py  cmip6_confirm_single_files.py  cmip6_count_files.py  cmip6_download_dataset.py  cmip6_download_file.py  cmip6_download_unsuccessful_files.py  cmip6_empty_dirs.py  cmip6_find_duplicate_versions.py  cmip6_move_to_thredds.py  combine.py  confirm_single_files.py  download_unsuccessful_files.py  download_unsuccessful_files_parallel.py  esgpull_incomplete.py  find_download_missing_files.py  fix1849issueECEarth3.py  fix_NorCPM_date_issue.py  test.py  versions.py
cmip6_utils/scripts/deprecated/: download_unsuccessful_files_parallel.py  esgpull_incomplete.py
