[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "cmip6_utils"
requires-python = ">=3.9"
version = "0.0.1"

[tool.setuptools]
py-modules = ["cmip6_utils"]

[project.scripts]
check_consistency = "cmip6_utils.scripts.check_consistency:main"
cmip6_count_files = "cmip6_utils.scripts.cmip6_count_files:main"
cmip6_download_file = "cmip6_utils.scripts.cmip6_download_file:main"
combine_cmip6 = "cmip6_utils.scripts.combine:main"
confirm_single_files = "cmip6_utils.scripts.confirm_single_files:main"
download_unsuccessful_files = "cmip6_utils.scripts.download_unsuccessful_files:main"
download_unsuccessful_files_parallel = "cmip6_utils.scripts.download_unsuccessful_files_parallel:main"
find_download_missing_files = "cmip6_utils.scripts.find_download_missing_files:main"
fix1849issueECEarth3 = "cmip6_utils.scripts.fix1849issueECEarth3:main"
