[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "cmip6_utils"
requires-python = ">=3.9"
version = "0.0.2"

[tool.setuptools]
py-modules = ["cmip6_utils"]

[project.scripts]
cmip6_check_consistency = "cmip6_utils.scripts.cmip6_check_consistency:main"
cmip6_confirm_single_files = "cmip6_utils.scripts.cmip6_confirm_single_files:main"
cmip6_count_files = "cmip6_utils.scripts.cmip6_count_files:main"
cmip6_download_file = "cmip6_utils.scripts.cmip6_download_file:main"
cmip6_combine = "cmip6_utils.scripts.cmip6_combine:main"
cmip6_download_unsuccessful_files = "cmip6_utils.scripts.cmip6_download_unsuccessful_files:main"
find_download_missing_files = "cmip6_utils.scripts.find_download_missing_files:main"
fix1849issueECEarth3 = "cmip6_utils.scripts.fix1849issueECEarth3:main"
